--- a/Reservation/Views/Shared/_Layout.cshtml
+++ b/Reservation/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header" style="padding: 0;">
                     <a href="#" class="logo">
-                        <img src="/assets/img/ventcamp_logo.png" alt="VentCamp" style="width: 100px; height: 100px;" class="retina-hide">
-                        <img src="/assets/img/ventcamp_logo@2x.png" alt="VentCamp" width="119" height="17" class="retina-show">
+                        <img src="/assets/img/ventcamp_logo.png" alt="همایش" style="width: 100px; height: 100px;" class="retina-hide">
+                        <img src="/assets/img/ventcamp_logo@2x.png" alt="همایش سراسری" width="119" height="17" class="retina-show">
                     </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                         <span class="icon-bar"></span>
