--- a/Reservation/Views/Home/About.cshtml
+++ b/Reservation/Views/Home/About.cshtml
@@ -178,7 +178,7 @@
                             </tr>
                             <tr>
                                 <td class="tg-baqh" rowspan="4"></td>
-                                <td class="tg-baqh" rowspan="4" style="vertical-align:middle"><img src="/assets/img/clip_image001.png"></td>
+                                <td class="tg-baqh" rowspan="4" style="vertical-align:middle"><img src="/assets/img/clip_image001.png" alt="همایش"></td>
                                 <td class="tg-baqh">روحیه</td>
                             </tr>
                             <tr>
