--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>نگاه-برگزارکننده ایونت</title>
+    <title>نگاه-برگزارکننده همایش</title>
 
     <meta name="description" content="برگزار کننده همایش ایونت رویداد نگاه">
-    <meta name="keywords" content="همایش, ایونت, رویداد, نگاه, negah, event">
-    <meta name="author" content="هلدینگ نگاه">
+    <meta name="keywords" content="سراسری, همایش, ایونت, رویداد, نگاه, negah, event">
+    <meta name="author" content="کنسرسیوم نگاه">
 
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
@@ -37,15 +37,12 @@
             <li class="socials-nav-item"><a href="https://www.twitter.com/negah_event"><span class="fa fa-twitter"></span></a></li>
             <li class="socials-nav-item"><a href="https://www.facebook.com/negah_event"><span class="fa fa-facebook"></span></a></li>
             <li class="socials-nav-item"><a href="https://www.linkedin.com/company/negah-event"><span class="fa fa-linkedin"></span></a></li>
-            <li class="socials-nav-item"><a href="https://www.youtube.com/negah_event"><span class="fa fa-youtube"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.youtube.com/channel/UCdy47hSxBOTZPTZ7Uxoq6sw"><span class="fa fa-youtube"></span></a></li>
             <li class="socials-nav-item"><a href="https://www.instagram.com/negah_event"><span class="fa fa-instagram"></span></a></li>
         </ul>
 
         <div class="heading-block centered-block align-center">
-
             <div class="container">
-
-
                 <div class="col-sm-5 col-xs-12 navigation-header" style="padding: 0;">
                     <p>
                         <br /><br /><br /><br />
@@ -140,7 +137,7 @@
                 <div class="tab-content">
                     <div id="horizontal_tab2" class="tab-pane fade active in">
                         <div class="col-sm-5 img-column">
-                            <img src="assets/img/negahLogo.jpg" alt="" class="img-responsive">
+                            <img src="assets/img/negahLogo.jpg" alt="همایش" class="img-responsive">
                         </div>
                         <div class="col-sm-7 align-right">
                             <p>
@@ -188,7 +185,7 @@
                             </div>
                         </div>
                         <div class="col-sm-5 img-column">
-                            <img src="assets/img/imac-371x412.png" alt="" class="img-responsive">
+                            <img src="assets/img/imac-371x412.png" alt="همایش" class="img-responsive">
                         </div>
                     </div>
                 </div>
@@ -548,7 +545,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium1_timeline" href="#day5_auditorium1_time1" class="schedule-item-toggle">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>2:20 PM</strong>
@@ -565,7 +562,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium1_timeline" href="#day5_auditorium1_time3" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>7:00 PM</strong>
@@ -582,7 +579,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش سراسری" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium1_timeline" href="#day5_auditorium1_time4" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>7:40 PM</strong>
@@ -611,7 +608,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش سراسری" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium2_timeline" href="#day5_auditorium2_time1" class="schedule-item-toggle">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>2:20 PM</strong>
@@ -640,7 +637,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش سراسری" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium3_timeline" href="#day5_auditorium3_time1" class="schedule-item-toggle">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>2:20 PM</strong>
@@ -657,7 +654,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش سراسری" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium3_timeline" href="#day5_auditorium3_time2" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>5:40 PM</strong>
@@ -674,7 +671,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <img src="assets/img/speakers/speaker1.jpg" alt="" class="img-responsive">
+                                                <img src="assets/img/speakers/speaker1.jpg" alt="همایش سراسری" class="img-responsive">
                                             </div>
                                             <a data-toggle="collapse" data-parent="#day5_auditorium3_timeline" href="#day5_auditorium3_time4" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>7:40 PM</strong>
@@ -900,7 +897,7 @@
                         </small>
                     </p>
 
-                    <img src="assets/img/autograph-143x105.png" alt="autograph">
+                    <img src="assets/img/autograph-143x105.png" alt="همایش">
                 </div>
             </div>
 
@@ -931,7 +928,7 @@
                 <div class="widget instagram-widget">
                     <h6 class="widget-head"> تصاویر همایش <span class="fa fa-instagram"></span></h6>
 
-                    <ul class="instagram-list">
+                    <!--<ul class="instagram-list">
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
@@ -941,7 +938,7 @@
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
                         <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                    </ul>
+                    </ul>-->
                 </div>
             </div>
         </div>
@@ -968,9 +965,11 @@
         <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
             <center>
                 <a href="#" onclick="$('#Video1').attr('src', '');$('#Video2').attr('src', '/Downloads/Teaser.mp4');" data-modal-link="Video-Modal2">
-                    <img src="~/assets/img/teaserThumbNail.png" width="120" height="120" />
+                    <img src="~/assets/img/teaserThumbNail.png" alt="برگزاری همایش" />
                 </a>
-
+                <a href="#" onclick="$('#Video1').attr('src', '');$('#Video3').attr('src', '/Downloads/motion2.mp4');" data-modal-link="Video-Modal3">
+                    <img src="~/assets/img/motionThumb.png" alt="برگزاری همایش" />
+                </a>
             </center>
             <span class="close-btn icon icon-office-52" onclick="$('#Video1').attr('src', '');"></span>
             @*<div class="container">*@
@@ -978,6 +977,35 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div align="center" class="embed-responsive embed-responsive-16by9">
                         <video id="Video1" autoplay class="embed-responsive-item" controls style="width: 100% !important">
+                            <source src="/video/video.mp4" type="video/mp4" />
+                            <source src="/video/video.ogv" type="video/ogg" />
+                            <source src="/video/video.webm" type="video/webm" />
+                        </video>
+                    </div>
+                </div>
+            </div>
+            @*</div>*@
+
+        </div>
+    </div>
+
+
+    <div class="modal-window" data-modal="Video-Modal2" style="background-color: rgba(2, 2, 2, 0.85);">
+        <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
+            <center>
+                <a href="#" onclick="$('#Video2').attr('src', '');$('#Video1').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal1">
+                    <img src="~/assets/img/cavathumbNail.png" title="برگزاری همایش" />
+                </a>
+                <a href="#" onclick="$('#Video2').attr('src', '');$('#Video3').attr('src', '/Downloads/motion2.mp4');" data-modal-link="Video-Modal3">
+                    <img src="~/assets/img/motionThumb.png" alt="برگزاری همایش" />
+                </a>
+            </center>
+            <span class="close-btn icon icon-office-52" onclick="$('#Video2').attr('src', '');"></span>
+            @*<div class="container">*@
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div align="center" class="embed-responsive embed-responsive-16by9">
+                        <video id="Video2" autoplay class="embed-responsive-item" controls style="width: 100% !important">
                             <source src="/video/video.mp4" type="video/mp4" />
                             <source src="/video/video.ogv" type="video/ogg" />
                             <source src="/video/video.webm" type="video/webm" />
@@ -992,20 +1020,22 @@
     </div>
 
 
-    <div class="modal-window" data-modal="Video-Modal2" style="background-color: rgba(2, 2, 2, 0.85);">
+    <div class="modal-window" data-modal="Video-Modal3" style="background-color: rgba(2, 2, 2, 0.85);">
         <div class="modal-box animated" data-animation="zoomIn" data-duration="700" style="opacity: 1;width: 75%">
             <center>
-                <a href="#" onclick="$('#Video2').attr('src', '');$('#Video1').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal1">
-                    <img src="~/assets/img/cavathumbNail.png" width="120" height="120" />
+                <a href="#" onclick="$('#Video3').attr('src', '');$('#Video1').attr('src', '/Downloads/CavalierRises.mp4');" data-modal-link="Video-Modal1">
+                    <img src="~/assets/img/cavathumbNail.png" title="برگزاری همایش" />
                 </a>
-
+                <a href="#" onclick="$('#Video3').attr('src', '');$('#Video3').attr('src', '/Downloads/Teaser.mp4');" data-modal-link="Video-Modal3">
+                    <img src="~/assets/img/teaserThumbNail.png" alt="برگزاری همایش" />
+                </a>
             </center>
-            <span class="close-btn icon icon-office-52" onclick="$('#Video2').attr('src', '');"></span>
+            <span class="close-btn icon icon-office-52" onclick="$('#Video3').attr('src', '');"></span>
             @*<div class="container">*@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div align="center" class="embed-responsive embed-responsive-16by9">
-                        <video id="Video2" autoplay class="embed-responsive-item" controls style="width: 100% !important">
+                        <video id="Video3" autoplay class="embed-responsive-item" controls style="width: 100% !important">
                             <source src="/video/video.mp4" type="video/mp4" />
                             <source src="/video/video.ogv" type="video/ogg" />
                             <source src="/video/video.webm" type="video/webm" />
