--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>نگاه-برگزارکننده همایش</title>
+    <title>همایش افزار نگاه|برگزار کننده همایش</title>
 
-    <meta name="description" content="برگزار کننده همایش ایونت رویداد نگاه">
-    <meta name="keywords" content="سراسری, همایش, ایونت, رویداد, نگاه, negah, event">
+    <meta name="description" content=" همایش افزار نگاه برگزار کننده همایش ایونت رویداد نگاه">
+    <meta name="keywords" content="کنسرسیوم نگاه, همایش افزار نگاه, سراسری, همایش, ایونت, رویداد, نگاه, negah, event">
     <meta name="author" content="کنسرسیوم نگاه">
 
     <link rel="shortcut icon" href="assets/img/favicon.ico">
@@ -647,6 +647,8 @@
                                                 <article>
                                                     <p class="description">Orci integer suspendisse. Iaculis libero primis rutrum pede eget at fermentum vel. Sem in turpis quis accumsan malesuada. Turpis id vivamus. Nec enim quasi potenti rhoncus id. Sed vestibulum ut tincidunt amet neque nulla vulputate.</p>
                                                     <strong class="highlight speaker-name">Michael Lambert</strong>
+
+
                                                 </article>
                                             </div>
                                         </div>
@@ -903,25 +905,25 @@
 
             <div class="col-md-4 col-lg-3 col-lg-offset-1">
                 <!--<div class="widget twitter-widget">
-                    <h6 class="widget-head"><span class="fa fa-twitter"></span> Twitter Feed</h6>
+                <h6 class="widget-head"><span class="fa fa-twitter"></span> Twitter Feed</h6>
 
-                    <ul class="tweets-list">
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">Grabehan <a href="#">#NowPlaying</a> Future People by Alabama Shakes <a href="http://spoti.fi/1CTPWcW">http://spoti.fi/1CTPWcW</a></p>
-                            <small class="tweet-date">7 sep 2015</small>
-                        </li>
+                <ul class="tweets-list">
+                    <li class="tweet">
+                        <p class="text-alt tweet-text">Grabehan <a href="#">#NowPlaying</a> Future People by Alabama Shakes <a href="http://spoti.fi/1CTPWcW">http://spoti.fi/1CTPWcW</a></p>
+                        <small class="tweet-date">7 sep 2015</small>
+                    </li>
 
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">Loving <a href="#"></a> so far. Ghost theming here I come!</p>
-                            <small class="tweet-date">8 sep 2015</small>
-                        </li>
+                    <li class="tweet">
+                        <p class="text-alt tweet-text">Loving <a href="#"></a> so far. Ghost theming here I come!</p>
+                        <small class="tweet-date">8 sep 2015</small>
+                    </li>
 
-                        <li class="tweet">
-                            <p class="text-alt tweet-text">We didn't set out to be superheroes. But sometimes, life doesn't go the way you planned. <a href="#">#TI5</a> <a href="#">#BleedBlue</a></p>
-                            <small class="tweet-date">9 sep 2015</small>
-                        </li>
-                    </ul>
-                </div>-->
+                    <li class="tweet">
+                        <p class="text-alt tweet-text">We didn't set out to be superheroes. But sometimes, life doesn't go the way you planned. <a href="#">#TI5</a> <a href="#">#BleedBlue</a></p>
+                        <small class="tweet-date">9 sep 2015</small>
+                    </li>
+                </ul>
+            </div>-->
             </div>
 
             <div class="col-md-4 col-lg-3 col-lg-offset-1">
@@ -929,20 +931,23 @@
                     <h6 class="widget-head"> تصاویر همایش <span class="fa fa-instagram"></span></h6>
 
                     <!--<ul class="instagram-list">
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                        <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
-                    </ul>-->
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                    <li><img src="assets/img/gallery/footer-photo.jpg" alt="photo"></li>
+                </ul>-->
                 </div>
             </div>
         </div>
-
+        <!-- Begin WebGozar.com Counter code -->
+        <script type="text/javascript" language="javascript" src="http://www.webgozar.ir/c.aspx?Code=3752578&amp;t=counter"></script>
+        <noscript><a href="http://www.webgozar.com/counter/stats.aspx?code=3752578" target="_blank">&#1570;&#1605;&#1575;&#1585;</a></noscript>
+        <!-- End WebGozar.com Counter code -->
         <div class="footer-base">
             <div class="container">
                 <div class="col-md-12 align-center">
@@ -1123,7 +1128,6 @@
     @*//  <script src="~/assets/js/jquery.countTo.js"></script>*@
 
     <script type="text/javascript" src="assets/js/ventcamp.js"></script>
-
-
+  
 </body>
 </html>
